feat(server, ui): refacto PR